# embedded-cpp-compat-check

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  TODO.md  index.html  platforms  pyproject.toml
.github/ISSUE_TEMPLATE/: new-platform.yml
.github/workflows/: build.yaml  monitor.yaml
action/: action.yml
avr-uno+recipe/: index.html
esp32s3-arduino-v3+recipe/: index.html
esp32s3-espressif32+recipe/: index.html
megaavr-nano-every/: index.html
megaavr-nano-every+recipe/: index.html
pytests/: conftest.py  test_e2e.py  test_readme_action.py
pytests/acceptance/: test_cli_library.py  test_feature_check.py  test_library_check.py
pytests/catalog/: test_models.py  test_parser.py  test_sync.py
pytests/orchestrator/: test_engine.py  test_manifest.py  test_results.py
pytests/pio_plugin/: test_cpp_standard.py
pytests/platform/: test_loader.py
pytests/probe/: test_extractor.py  test_generator.py
pytests/site/: test_html.py  test_readme.py
reports/: note-cpp.md
results/: manifest.json
rp2040-pico/: index.html
rp2040-pico+recipe/: index.html
samd21-zero/: index.html
samd21-zero+recipe/: index.html
samd51-feather-m4/: index.html
samd51-feather-m4+recipe/: index.html
scripts/: audit_errors.py  clean-work.sh  generate_tests.py
site/: index.html
site/avr-uno/: index.html
site/avr-uno+recipe/: index.html
site/esp32s3-arduino-v3+recipe/: index.html
stm32-nucleo-f411re/: index.html
stm32-nucleo-f411re+recipe/: index.html
teensy41+recipe/: index.html
tests/cpp17/: any.cpp  (+66 more)
uno-r4-minima+recipe/: index.html
(+476 files in other folders)
